--- a/data/nginx/app.conf.dist
+++ b/data/nginx/app.conf.dist
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name www-new.nbis.se;
+    server_name example.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -18,7 +18,7 @@ server {
 
 #server {
 #    listen 443 ssl;
-#    server_name www-new.nbis.se;
+#    server_name example.com;
 #    server_tokens off;
 #    
 #    root /www;
@@ -42,8 +42,8 @@ server {
 #        include fastcgi_params;
 #    }
 #
-#    ssl_certificate /etc/letsencrypt/live/www-new.nbis.se/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/www-new.nbis.se/privkey.pem;
+#    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+#    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
 #    include /etc/letsencrypt/options-ssl-nginx.conf;
 #    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 #}
