--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./data/php-fpm
     working_dir: /www
     volumes:
-      - './data/html:/www:rw'
+      - './html:/www:rw'
       - './data/log:/usr/local/var/log:rw'
 
   nginx:
@@ -16,7 +16,7 @@ services:
       - "443:443"
     volumes:
       - './data/log:/var/log:rw'
-      - './data/html:/www:rw'
+      - './html:/www:rw'
       - './data/nginx:/etc/nginx/conf.d:ro'
       - './data/certbot/www:/var/www/certbot:ro'
       - './data/certbot/conf:/etc/letsencrypt:ro'
@@ -31,5 +31,6 @@ services:
       - './data/log:/var/log:rw'
       - './data/certbot/www:/var/www/certbot:rw'
       - './data/certbot/conf:/etc/letsencrypt:rw'
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 30d & wait $${!}; done;'"
 
 
